--- a/.gitignore
+++ b/.gitignore
@@ -166,7 +166,7 @@ test project
 new_test.py
 invited_attendees_2.csv
 invited_attendees.csv
-config.py
+new_config.py
 invited_attendees.pkl
 link_login.py
 linkedin_cookies.pkl
